# bevy_template

./: Cargo.toml  index.html
src/: lib.rs  main.rs
src/main_menu/: main_menu_plugin.rs  mod.rs
